# C_plus_plus

Lab_work_4/: cafeses.cpp
Lab_work_5/: Close_lab5.cpp  file.cpp
Lab_work_6/: file.cpp  zash.cpp
Lab_work_7/: file7.cpp  zash.cpp
Lab_work_8/: CMakeLists.txt  main.cpp  prog2.cpp  prog2.h  prog2.ui
Lab_work_9/: CMakeLists.txt  car.cpp  car.h  car.ui  main.cpp
